# label-forge

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS
configs/: mvp.yaml
configs/engines/: vllm_deterministic.yaml  vllm_throughput.yaml
docs/: add_stage.md  architecture.md  determinism.md  io_layout.md  run_contract.md
labelforge/: __init__.py
labelforge/cache/: __init__.py  fs_cache.py  key.py  store.py  validation.py
labelforge/cli/: __init__.py  ablate.py
labelforge/core/: __init__.py  env_capture.py  json_canonical.py  model_fingerprint.py  model_spec.py  prompt_fingerprint.py  prompt_pack.py  prompt_resolver.py  row_id.py  schema.py  seeds.py  synth_spec.py
labelforge/core/manifest/: __init__.py  hash.py  replay_planner.py  row_record.py  run_manifest.py  stage_manifest.py
labelforge/eval/: __init__.py
labelforge/experiments/: __init__.py  matrix.py
labelforge/io/: __init__.py  dataset_rw.py
labelforge/llm/: __init__.py  determinism.py  postprocess.py  processor_factory.py  sampling.py  vlm_messages.py
labelforge/mining/: __init__.py  candidates.py  hardness.py  select.py
labelforge/pipelines/: __init__.py  dag.py  resume.py  retry.py  runner.py  stage.py
labelforge/pipelines/stages/: __init__.py  embed_text.py  rubric_score.py  synth_filter.py  synth_text.py  synth_vlm_conversation.py  text_extract.py  text_label.py  vlm_caption.py  vlm_tags.py
labelforge/ray/: __init__.py  determinism.py
labelforge/synth/: __init__.py
prompts/mvp/: pack.yaml
tests/: test_cache.py  test_dag.py  test_env_capture.py  test_hashing.py  test_integration.py  test_json_canonical.py  test_labeling_stages.py  test_llm.py  test_manifest.py  test_model_spec.py  test_pipeline.py  test_prompt.py  test_schema.py  test_seeds.py  test_stages.py
